Archive2/29/352cd6037d1c80/output
main.cpp: In function 'int main()':
main.cpp:10:16: error: use of deleted function 'MyClass::MyClass(const MyClass&)'
     MyClass b(a);
                ^
main.cpp:3:7: note: 'MyClass::MyClass(const MyClass&)' is implicitly deleted because the default definition would be ill-formed:
 class MyClass {
       ^
main.cpp:3:7: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = int; _Dp = std::default_delete<int>]'
In file included from /usr/local/include/c++/4.9.0/memory:81:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
